--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -14,7 +14,7 @@
 
 @SET_MAKE@
 
-SOURCES = $(directnet_SOURCES)
+SOURCES = $(directnet_SOURCES) $(directnetx_SOURCES)
 
 srcdir = @srcdir@
 top_srcdir = @top_srcdir@
@@ -37,7 +37,8 @@ NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
 host_triplet = @host@
-bin_PROGRAMS = directnet$(EXEEXT)
+@UI_CXX_FALSE@bin_PROGRAMS = directnet$(EXEEXT)
+@UI_CXX_TRUE@bin_PROGRAMS = directnetx$(EXEEXT)
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -51,20 +52,23 @@ am__installdirs = "$(DESTDIR)$(bindir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
 am__directnet_SOURCES_DIST = client.c connection.c directnet.c \
-	gpg-fake.c hash.c server.c fake.cc
+	gpg-fake.c hash.c server.c
 @UI_CXX_FALSE@am_directnet_OBJECTS = directnet-client.$(OBJEXT) \
 @UI_CXX_FALSE@	directnet-connection.$(OBJEXT) \
 @UI_CXX_FALSE@	directnet-directnet.$(OBJEXT) \
 @UI_CXX_FALSE@	directnet-gpg-fake.$(OBJEXT) \
 @UI_CXX_FALSE@	directnet-hash.$(OBJEXT) \
 @UI_CXX_FALSE@	directnet-server.$(OBJEXT)
-@UI_CXX_TRUE@am_directnet_OBJECTS = directnet-client.$(OBJEXT) \
-@UI_CXX_TRUE@	directnet-connection.$(OBJEXT) \
-@UI_CXX_TRUE@	directnet-directnet.$(OBJEXT) \
-@UI_CXX_TRUE@	directnet-gpg-fake.$(OBJEXT) \
-@UI_CXX_TRUE@	directnet-hash.$(OBJEXT) \
-@UI_CXX_TRUE@	directnet-server.$(OBJEXT) fake.$(OBJEXT)
 directnet_OBJECTS = $(am_directnet_OBJECTS)
+am__directnetx_SOURCES_DIST = client.c connection.c directnet.c \
+	gpg-fake.c hash.c server.c fake.cc
+@UI_CXX_TRUE@am_directnetx_OBJECTS = directnetx-client.$(OBJEXT) \
+@UI_CXX_TRUE@	directnetx-connection.$(OBJEXT) \
+@UI_CXX_TRUE@	directnetx-directnet.$(OBJEXT) \
+@UI_CXX_TRUE@	directnetx-gpg-fake.$(OBJEXT) \
+@UI_CXX_TRUE@	directnetx-hash.$(OBJEXT) \
+@UI_CXX_TRUE@	directnetx-server.$(OBJEXT) fake.$(OBJEXT)
+directnetx_OBJECTS = $(am_directnetx_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/scripts/depcomp
 am__depfiles_maybe = depfiles
@@ -77,8 +81,9 @@ CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 CXXLD = $(CXX)
 CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) \
 	-o $@
-SOURCES = $(directnet_SOURCES)
-DIST_SOURCES = $(am__directnet_SOURCES_DIST)
+SOURCES = $(directnet_SOURCES) $(directnetx_SOURCES)
+DIST_SOURCES = $(am__directnet_SOURCES_DIST) \
+	$(am__directnetx_SOURCES_DIST)
 RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
 	html-recursive info-recursive install-data-recursive \
 	install-exec-recursive install-info-recursive \
@@ -201,15 +206,9 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 SUBDIRS = @UI_DIR@
 AM_CFLAGS = @PTHREAD_CFLAGS@
+AM_CXXFLAGS = @PTHREAD_CFLAGS@
 AM_LDFLAGS = @PTHREAD_LIBS@
-@UI_CXX_FALSE@directnet_SOURCES = client.c \
-@UI_CXX_FALSE@connection.c \
-@UI_CXX_FALSE@directnet.c \
-@UI_CXX_FALSE@gpg-fake.c \
-@UI_CXX_FALSE@hash.c \
-@UI_CXX_FALSE@server.c
-
-@UI_CXX_TRUE@directnet_SOURCES = client.c \
+@UI_CXX_TRUE@directnetx_SOURCES = client.c \
 @UI_CXX_TRUE@connection.c \
 @UI_CXX_TRUE@directnet.c \
 @UI_CXX_TRUE@gpg-fake.c \
@@ -217,10 +216,21 @@ AM_LDFLAGS = @PTHREAD_LIBS@
 @UI_CXX_TRUE@server.c \
 @UI_CXX_TRUE@fake.cc
 
-directnet_CFLAGS = @UI_CFLAGS@
-directnet_LDFLAGS = @UI_LDFLAGS@
-directnet_DEPENDENCIES = @UI_DIR@/libui.a
-directnet_LDADD = @UI_DIR@/libui.a @UI_LIBS@
+@UI_CXX_TRUE@directnetx_CFLAGS = @UI_CFLAGS@
+@UI_CXX_TRUE@directnetx_LDFLAGS = @UI_LDFLAGS@
+@UI_CXX_TRUE@directnetx_DEPENDENCIES = @UI_DIR@/libui.a
+@UI_CXX_TRUE@directnetx_LDADD = @UI_DIR@/libui.a @UI_LIBS@
+@UI_CXX_FALSE@directnet_SOURCES = client.c \
+@UI_CXX_FALSE@connection.c \
+@UI_CXX_FALSE@directnet.c \
+@UI_CXX_FALSE@gpg-fake.c \
+@UI_CXX_FALSE@hash.c \
+@UI_CXX_FALSE@server.c
+
+@UI_CXX_FALSE@directnet_CFLAGS = @UI_CFLAGS@
+@UI_CXX_FALSE@directnet_LDFLAGS = @UI_LDFLAGS@
+@UI_CXX_FALSE@directnet_DEPENDENCIES = @UI_DIR@/libui.a
+@UI_CXX_FALSE@directnet_LDADD = @UI_DIR@/libui.a @UI_LIBS@
 all: all-recursive
 
 .SUFFIXES:
@@ -279,7 +289,10 @@ clean-binPROGRAMS:
 	-test -z "$(bin_PROGRAMS)" || rm -f $(bin_PROGRAMS)
 directnet$(EXEEXT): $(directnet_OBJECTS) $(directnet_DEPENDENCIES) 
 	@rm -f directnet$(EXEEXT)
-	$(CXXLINK) $(directnet_LDFLAGS) $(directnet_OBJECTS) $(directnet_LDADD) $(LIBS)
+	$(LINK) $(directnet_LDFLAGS) $(directnet_OBJECTS) $(directnet_LDADD) $(LIBS)
+directnetx$(EXEEXT): $(directnetx_OBJECTS) $(directnetx_DEPENDENCIES) 
+	@rm -f directnetx$(EXEEXT)
+	$(CXXLINK) $(directnetx_LDFLAGS) $(directnetx_OBJECTS) $(directnetx_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -293,6 +306,12 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-gpg-fake.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-hash.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnet-server.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-client.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-connection.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-directnet.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-gpg-fake.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-hash.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/directnetx-server.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fake.Po@am__quote@
 
 .c.o:
@@ -392,6 +411,90 @@ directnet-server.obj: server.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='server.c' object='directnet-server.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnet_CFLAGS) $(CFLAGS) -c -o directnet-server.obj `if test -f 'server.c'; then $(CYGPATH_W) 'server.c'; else $(CYGPATH_W) '$(srcdir)/server.c'; fi`
+
+directnetx-client.o: client.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -MT directnetx-client.o -MD -MP -MF "$(DEPDIR)/directnetx-client.Tpo" -c -o directnetx-client.o `test -f 'client.c' || echo '$(srcdir)/'`client.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/directnetx-client.Tpo" "$(DEPDIR)/directnetx-client.Po"; else rm -f "$(DEPDIR)/directnetx-client.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='client.c' object='directnetx-client.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -c -o directnetx-client.o `test -f 'client.c' || echo '$(srcdir)/'`client.c
+
+directnetx-client.obj: client.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -MT directnetx-client.obj -MD -MP -MF "$(DEPDIR)/directnetx-client.Tpo" -c -o directnetx-client.obj `if test -f 'client.c'; then $(CYGPATH_W) 'client.c'; else $(CYGPATH_W) '$(srcdir)/client.c'; fi`; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/directnetx-client.Tpo" "$(DEPDIR)/directnetx-client.Po"; else rm -f "$(DEPDIR)/directnetx-client.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='client.c' object='directnetx-client.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -c -o directnetx-client.obj `if test -f 'client.c'; then $(CYGPATH_W) 'client.c'; else $(CYGPATH_W) '$(srcdir)/client.c'; fi`
+
+directnetx-connection.o: connection.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -MT directnetx-connection.o -MD -MP -MF "$(DEPDIR)/directnetx-connection.Tpo" -c -o directnetx-connection.o `test -f 'connection.c' || echo '$(srcdir)/'`connection.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/directnetx-connection.Tpo" "$(DEPDIR)/directnetx-connection.Po"; else rm -f "$(DEPDIR)/directnetx-connection.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='connection.c' object='directnetx-connection.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -c -o directnetx-connection.o `test -f 'connection.c' || echo '$(srcdir)/'`connection.c
+
+directnetx-connection.obj: connection.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -MT directnetx-connection.obj -MD -MP -MF "$(DEPDIR)/directnetx-connection.Tpo" -c -o directnetx-connection.obj `if test -f 'connection.c'; then $(CYGPATH_W) 'connection.c'; else $(CYGPATH_W) '$(srcdir)/connection.c'; fi`; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/directnetx-connection.Tpo" "$(DEPDIR)/directnetx-connection.Po"; else rm -f "$(DEPDIR)/directnetx-connection.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='connection.c' object='directnetx-connection.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -c -o directnetx-connection.obj `if test -f 'connection.c'; then $(CYGPATH_W) 'connection.c'; else $(CYGPATH_W) '$(srcdir)/connection.c'; fi`
+
+directnetx-directnet.o: directnet.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -MT directnetx-directnet.o -MD -MP -MF "$(DEPDIR)/directnetx-directnet.Tpo" -c -o directnetx-directnet.o `test -f 'directnet.c' || echo '$(srcdir)/'`directnet.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/directnetx-directnet.Tpo" "$(DEPDIR)/directnetx-directnet.Po"; else rm -f "$(DEPDIR)/directnetx-directnet.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='directnet.c' object='directnetx-directnet.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -c -o directnetx-directnet.o `test -f 'directnet.c' || echo '$(srcdir)/'`directnet.c
+
+directnetx-directnet.obj: directnet.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -MT directnetx-directnet.obj -MD -MP -MF "$(DEPDIR)/directnetx-directnet.Tpo" -c -o directnetx-directnet.obj `if test -f 'directnet.c'; then $(CYGPATH_W) 'directnet.c'; else $(CYGPATH_W) '$(srcdir)/directnet.c'; fi`; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/directnetx-directnet.Tpo" "$(DEPDIR)/directnetx-directnet.Po"; else rm -f "$(DEPDIR)/directnetx-directnet.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='directnet.c' object='directnetx-directnet.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -c -o directnetx-directnet.obj `if test -f 'directnet.c'; then $(CYGPATH_W) 'directnet.c'; else $(CYGPATH_W) '$(srcdir)/directnet.c'; fi`
+
+directnetx-gpg-fake.o: gpg-fake.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -MT directnetx-gpg-fake.o -MD -MP -MF "$(DEPDIR)/directnetx-gpg-fake.Tpo" -c -o directnetx-gpg-fake.o `test -f 'gpg-fake.c' || echo '$(srcdir)/'`gpg-fake.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/directnetx-gpg-fake.Tpo" "$(DEPDIR)/directnetx-gpg-fake.Po"; else rm -f "$(DEPDIR)/directnetx-gpg-fake.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='gpg-fake.c' object='directnetx-gpg-fake.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -c -o directnetx-gpg-fake.o `test -f 'gpg-fake.c' || echo '$(srcdir)/'`gpg-fake.c
+
+directnetx-gpg-fake.obj: gpg-fake.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -MT directnetx-gpg-fake.obj -MD -MP -MF "$(DEPDIR)/directnetx-gpg-fake.Tpo" -c -o directnetx-gpg-fake.obj `if test -f 'gpg-fake.c'; then $(CYGPATH_W) 'gpg-fake.c'; else $(CYGPATH_W) '$(srcdir)/gpg-fake.c'; fi`; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/directnetx-gpg-fake.Tpo" "$(DEPDIR)/directnetx-gpg-fake.Po"; else rm -f "$(DEPDIR)/directnetx-gpg-fake.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='gpg-fake.c' object='directnetx-gpg-fake.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -c -o directnetx-gpg-fake.obj `if test -f 'gpg-fake.c'; then $(CYGPATH_W) 'gpg-fake.c'; else $(CYGPATH_W) '$(srcdir)/gpg-fake.c'; fi`
+
+directnetx-hash.o: hash.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -MT directnetx-hash.o -MD -MP -MF "$(DEPDIR)/directnetx-hash.Tpo" -c -o directnetx-hash.o `test -f 'hash.c' || echo '$(srcdir)/'`hash.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/directnetx-hash.Tpo" "$(DEPDIR)/directnetx-hash.Po"; else rm -f "$(DEPDIR)/directnetx-hash.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='hash.c' object='directnetx-hash.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -c -o directnetx-hash.o `test -f 'hash.c' || echo '$(srcdir)/'`hash.c
+
+directnetx-hash.obj: hash.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -MT directnetx-hash.obj -MD -MP -MF "$(DEPDIR)/directnetx-hash.Tpo" -c -o directnetx-hash.obj `if test -f 'hash.c'; then $(CYGPATH_W) 'hash.c'; else $(CYGPATH_W) '$(srcdir)/hash.c'; fi`; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/directnetx-hash.Tpo" "$(DEPDIR)/directnetx-hash.Po"; else rm -f "$(DEPDIR)/directnetx-hash.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='hash.c' object='directnetx-hash.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -c -o directnetx-hash.obj `if test -f 'hash.c'; then $(CYGPATH_W) 'hash.c'; else $(CYGPATH_W) '$(srcdir)/hash.c'; fi`
+
+directnetx-server.o: server.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -MT directnetx-server.o -MD -MP -MF "$(DEPDIR)/directnetx-server.Tpo" -c -o directnetx-server.o `test -f 'server.c' || echo '$(srcdir)/'`server.c; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/directnetx-server.Tpo" "$(DEPDIR)/directnetx-server.Po"; else rm -f "$(DEPDIR)/directnetx-server.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='server.c' object='directnetx-server.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -c -o directnetx-server.o `test -f 'server.c' || echo '$(srcdir)/'`server.c
+
+directnetx-server.obj: server.c
+@am__fastdepCC_TRUE@	if $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -MT directnetx-server.obj -MD -MP -MF "$(DEPDIR)/directnetx-server.Tpo" -c -o directnetx-server.obj `if test -f 'server.c'; then $(CYGPATH_W) 'server.c'; else $(CYGPATH_W) '$(srcdir)/server.c'; fi`; \
+@am__fastdepCC_TRUE@	then mv -f "$(DEPDIR)/directnetx-server.Tpo" "$(DEPDIR)/directnetx-server.Po"; else rm -f "$(DEPDIR)/directnetx-server.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='server.c' object='directnetx-server.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(directnetx_CFLAGS) $(CFLAGS) -c -o directnetx-server.obj `if test -f 'server.c'; then $(CYGPATH_W) 'server.c'; else $(CYGPATH_W) '$(srcdir)/server.c'; fi`
 
 .cc.o:
 @am__fastdepCXX_TRUE@	if $(CXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
