--- a/directnet/configure.ac
+++ b/directnet/configure.ac
@@ -167,7 +167,7 @@ AM_CONDITIONAL(UI_CXX, test "x$UI_CXX" = "xtrue")
 # Checks for header files.
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h semaphore.h stdlib.h string.h sys/socket.h unistd.h])
+AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 
